--- a/thunderstore.toml
+++ b/thunderstore.toml
@@ -4,8 +4,8 @@ schemaVersion = "0.0.1"
 
 [package]
 namespace = "FV214Hardiel"
-name = "Free_Reroll_Arcanas"
-versionNumber = "0.0.0"
+name = "FreeRerollArcanas"
+versionNumber = "0.1.2"
 description = "Makes your reroll arcanas be free with grasp and give you A LOT of rerolls"
 websiteUrl = "https://github.com/FV214Hardiel"
 containsNsfwContent = false
